# zoho-desk-python

./: .env.sample  .gitignore  .gitlab-ci.yml  .travis.yml  README.md  docker-compose.yml  lab.ipynb  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: tickets.py
app/core/: config.py
app/schemas/: __init__.py  tickets.py  zoho_app.py  zoho_self_client.py
app/zoho_desk/: __init__.py  zoho_desk.py
tests/zoho_desk/: test_tickets_api.py
