[tool.poetry]
name = "serenity-customer-support"
version = "0.1.0"
description = ""
authors = ["Chris Dare <chris@clearspacelabs.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
requests = "^2.25.1"
uvicorn = "^0.13.3"
python-dotenv = "^0.15.0"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
